# syslog-server

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SyslogServer.bat  SyslogServer.spec  build.bat  enable_ntp_server.bat  install_service.bat  install_service.sh  pyproject.toml  requirements.txt  uninstall_service.bat  uninstall_service.sh
src/syslog_server/: __init__.py  __main__.py  app.py
src/syslog_server/alerts/: alert_engine.py  email_notifier.py  notifier.py
src/syslog_server/core/: config.py  constants.py  dispatcher.py  message.py  message_queue.py
src/syslog_server/export/: csv_exporter.py  report_generator.py
src/syslog_server/network/: listener_manager.py  ntp_server.py  tcp_listener.py  tls_listener.py  udp_listener.py
src/syslog_server/parser/: auto_detect.py  cisco.py  hirschmann.py  hirschmann_enricher.py  rfc3164.py  rfc5424.py
src/syslog_server/storage/: database.py  file_writer.py  storage_manager.py
src/syslog_server/web/: broadcaster.py
src/syslog_server/web/api/: alerts_api.py  config_api.py  devices.py  messages.py  stats.py
src/syslog_server/web/static/: app.js  index.html
src/syslog_server/web/ws/: live.py
